<resources>
    <string name="app_name">Lab1-GUI</string>
    <string name="label_name">Imię:</string>
    <string name="label_lastName">Nazwisko:</string>
    <string name="label_numberOfMark">Liczba ocen:</string>
    <string name="input_name">Wpisz imię</string>
    <string name="input_lastName">Wpisz nazwisko</string>
    <string name="input_numberOfMark">Wpisz liczbę ocen (5–15)</string>
    <string name="button_mark">Oceny</string>
    <string name="string_button_oblicz">Oblicz średnią</string>
    <string-array name="przedmioty">
        <item>Przedmiot 1</item>
        <item>Przedmiot 2</item>
        <item>Przedmiot 3</item>
        <item>Przedmiot 4</item>
        <item>Przedmiot 5</item>
        <item>Przedmiot 6</item>
        <item>Przedmiot 7</item>
        <item>Przedmiot 8</item>
        <item>Przedmiot 9</item>
        <item>Przedmiot 10</item>
        <item>Przedmiot 11</item>
        <item>Przedmiot 12</item>
        <item>Przedmiot 13</item>
        <item>Przedmiot 14</item>
        <item>Przedmiot 15</item>
    </string-array>
</resources>