<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/labelName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:text="@string/label_name"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/inputName"
        app:layout_constraintEnd_toEndOf="@+id/labelLastName"
        app:layout_constraintTop_toTopOf="@+id/inputName" />

    <EditText
        android:id="@+id/inputName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/labelName"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelLastName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_weight="10"
        android:text="@string/label_lastName"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/inputLastName"
        app:layout_constraintEnd_toStartOf="@+id/inputNumberOfMark"
        app:layout_constraintTop_toTopOf="@+id/inputLastName"
        app:layout_constraintVertical_bias="0.516" />

    <EditText
        android:id="@+id/inputLastName"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_lastName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelLastName"
        app:layout_constraintTop_toBottomOf="@+id/inputName"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/labelNumberOfMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="10"
        android:text="@string/label_numberOfMark"
        android:textAlignment="textEnd"
        app:layout_constraintBottom_toBottomOf="@+id/inputNumberOfMark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputNumberOfMark" />

    <EditText
        android:id="@+id/inputNumberOfMark"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/input_numberOfMark"
        android:importantForAutofill="no"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/labelNumberOfMark"
        app:layout_constraintTop_toBottomOf="@+id/inputLastName"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="166dp"
        android:layout_height="56dp"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/teal_700"
        android:onClick="buttonClick"
        android:text="@string/button_mark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.499"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberOfMark"
        app:rippleColor="@color/teal_200" />

    <TextView
        android:id="@+id/textSrednia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputNumberOfMark" />

</androidx.constraintlayout.widget.ConstraintLayout>